# radar-semantic-segmentation

./: .gitignore  common.py  compute_metrics.py  config.py  dataset.py  debugger_UI.py  encoder.py  loss..py  loss.py  main.py  model.py  preprocess_data.py  pyproject.toml  run_inference.py  runner.py  sandbox.ipynb  testing_grid_encoder.ipynb  tracker.py  tracking_sandbox.ipynb  train.py
results/: confusion_matrix_baseline_unet_noWCE_ep12.pth
