[project]
name = "radar-semantic-segmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "h5py>=3.15.1",
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pyqt6>=6.10.0",
    "pyqtgraph>=0.13.7",
    "torchmetrics>=1.8.2",
    "tqdm>=4.67.1",
]
